--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "balanced",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Balanced Payments for Node",
   "main": "index.js",
   "scripts": {
@@ -14,9 +14,9 @@
     "balanced",
     "payments"
   ],
-  "author": "cjm, contributions by Net Minds, Inc.",
+  "author": "cjm, contributions by mrickard of Net Minds, Inc.",
   "license": "BSD",
   "dependencies": {
-    "request": "~2.12.0"
+    "request": "~2.16.x"
   }
 }
