Update URL of repo
Signed-off-by: Maurice Rickard <maurice@mauricerickard.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/netminds/balanced.git"
+    "url": "git://github.com/mrickard/balanced.git"
   },
   "keywords": [
     "balanced",
